--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,8 @@
 <html>
   <head>
     <title>SMO</title>
-    <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= javascript_include_tag "autocomplete-rails.js" %>
+    <%= stylesheet_link_tag    "application","datepicker", :media => "all" %>
+    <%= javascript_include_tag "application","autocomplete-rails","bootstrap-datepicker" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
@@ -71,7 +70,6 @@
     </div>
     <div id='ajax_loader_big_div'>
       <img alt="Ajax-loader-big" src="/assets/ajax-loader-big.gif"  />
-
     </div>
   </body>
 </html>
