custom validation for custom fields

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -33,6 +33,9 @@ div {
   color: red;
   display: table;
 }
+.field_with_errors input{
+    border: 1px solid red;
+}
 
 #error_explanation {
   width: 450px;
