--- a/app/views/customs/_form.html.erb
+++ b/app/views/customs/_form.html.erb
@@ -12,7 +12,7 @@
       </td>
     </tr>
     <tr>
-      <td><%= f.label :name, "Create a label for your custom field" %></td>
+      <td><%= f.label :name, "Create a unique label for your custom field" %></td>
       <td><%= f.label :field, "Select a custom field" %></td>
       <td>&nbsp;</td>
     </tr>
