--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,3 +1,7 @@
+<%= gmaps4rails(@json) %><br/>
+<br/>
+<br/>
+<br/>
 <%= render '/layouts/customer_with_action' %>
 <%= render '/layouts/tab_panel_for_customer' %>
 <%= render 'form' %>
