--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,5 @@
+<%= gmaps4rails(@json) %><br/><br/>
+<br/>
 <%= render '/layouts/job_with_action' %>
 <%= render '/layouts/tab_panel_for_job' %>
 <%= render 'form' %>
