--- a/app/views/jobsites/index.html.erb
+++ b/app/views/jobsites/index.html.erb
@@ -8,6 +8,7 @@
       <th>City</th>
       <th>State</th>
       <th>Zip</th>
+      <th>Action</th>
     </tr>
 
 
@@ -17,6 +18,7 @@
         <td><%= jobsite.city %></td>
         <td><%= jobsite.state %></td>
         <td><%= jobsite.zip %></td>
+        <td><%= link_to 'Edit', edit_jobsite_path(jobsite) %></td>
       </tr>
     <% end %>
       <tr>
@@ -24,3 +26,4 @@
       </tr>
   </table>
 </table>
+
