--- a/app/views/jobtimes/index.html.erb
+++ b/app/views/jobtimes/index.html.erb
@@ -16,7 +16,7 @@
 <%= button_tag "Add schedule", :style => "height:30px; width: 120px;"%>
 <hr>
 <table class ="table-striped">
-  <tr>
+  <tr style="text-align: left;">
     <th>Date</th>
     <th>Qty</th>
     <th>Who</th>
