--- a/app/views/layouts/_tab_panel_for_job.erb
+++ b/app/views/layouts/_tab_panel_for_job.erb
@@ -20,7 +20,7 @@
     <%= link_to "Documents", documents_path(:type => "Job"), :title => "list job documents" %>
   </li>
 
-  <li class = <%= params[:controller] == "customs" ? 'active' : '' %> >
+  <li class = <%= (params[:controller] == "customs" && params[:type] == "Job") ? 'active' : '' %> >
     <%= link_to "Custom", customs_path(:type => "Job"), :title => "Job custom page" %>
   </li>
   
