--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
       </td>
       <td>
         Name <br/>
-        <%= f.text_field :name %>
+        <%= f.text_field :name, :class => "span4" %>
       </td>
     </tr>
     <tr>
@@ -36,13 +36,13 @@
       </td>
       <td>
         Accounting Name <br/>
-        <%= f.text_field :accounting_name %>
+        <%= f.text_field :accounting_name, :class => "span4" %>
       </td>
     </tr>
     <tr>
       <td>
         Email <br/>
-        <%= f.email_field :email %>
+        <%= f.email_field :email, :class => "span4" %>
       </td>
       <td>
         <%= f.check_box :smo_user %> SMO User
@@ -51,7 +51,7 @@
     <tr>
       <td>
         Language <br/>
-        <%= f.text_field :language %>
+        <%= f.text_field :language, :class => "span4" %>
       </td>
       <td>
         Time Zone <br/>
@@ -59,7 +59,7 @@
       </td>
     </tr>
     <tr>
-      <td><%= f.submit "SAVE" %></td>
+      <td><%= f.submit "SAVE", :style => "padding: 5px 10px;" %></td>
     </tr>
   </table>
 <% end %>
