--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,18 @@
-<%= form_for @user,  :remote => true do |f| %>
+<%= form_for(@user, :url => @user.new_record? ? create_user_path : user_path(@user), :remote => true) do |f| %>
   <table width="100%;">
     <tr>
       <td>
-       <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this customer from being saved:</h2>
+        <% if @user.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
-      <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
+            <ul>
+              <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
       </td>
     </tr>
     <tr>
