--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@user, :url => @user.new_record? ? create_user_path : user_path(@user), :remote => true) do |f| %>
   <table width="100%;">
     <tr>
-      <td>
+      <td colspan="2">
         <% if @user.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(@user.errors.count, "error") %> prohibited this customer from being saved:</h2>
@@ -59,7 +59,7 @@
       </td>
     </tr>
     <tr>
-      <td><%= f.submit "SAVE", :style => "padding: 5px 10px;" %></td>
+      <td><%= f.submit "Save", :style => "padding: 5px 10px;" %></td>
     </tr>
   </table>
 <% end %>
