--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,12 +1,8 @@
 <% if !@user.new_record? %>
   $('#users').html("<%= escape_javascript(render(:partial => 'users', :locals => {:users => @users})) %> ");
-  $("#user_role_id").val(' ')
-  $("#user_name").val(' ')
-  $("#user_accounting_type").val(' ')
-  $("#user_accounting_name").val(' ')
-  $("#user_email").val(' ')
-  $("#user_language").val(' ')
-   $("#user_time_zone").val(' ')
+  $("input[type='text']").val('');
+  $("input[type='email']").val('');
+  $(".field_with_errors input").css('border','1px solid #CCCCCC');
   $("#error_explanation").hide();
 <% else %>
   $("#user_form").html("<%= escape_javascript(render(:partial => 'form')) %>")
