jobtime management completed

--- a/app/views/customs/index.html.erb
+++ b/app/views/customs/index.html.erb
@@ -6,7 +6,12 @@
 </style>
 
 <%= render '/layouts/customer_with_action' %>
-<%= render '/layouts/tab_panel_for_customer' %>
+
+<% if params[:type] == "Job" || params[:type] == "job" %>
+  <%= render '/layouts/tab_panel_for_job' %>
+<% else %>
+  <%= render  '/layouts/tab_panel_for_customer' %>
+<% end %>
 
 <ul class="nav nav-tabs" id="custom_tab">
   <li class='active'>
