--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,7 @@
     <title>SMO</title>
     <%= stylesheet_link_tag    "application","datepicker", :media => "all" %>
     <%= stylesheet_link_tag 'gmaps4rails' %>
-    <%= javascript_include_tag "application","autocomplete-rails","bootstrap-datepicker" %>
-    <%= javascript_include_tag "autocomplete-rails.js" %>
+    <%= javascript_include_tag "application","autocomplete-rails","bootstrap-datepicker","signature" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
