--- a/app/views/roles/_roles.html.erb
+++ b/app/views/roles/_roles.html.erb
@@ -4,6 +4,7 @@
       <th>Role</th>
       <th>Customer</th>
       <th>Jobs</th>
+      <th>Jobtimes</th>
       <th>Contacts</th>
       <th>Reports</th>
       <th>Settings/Admin</th>
@@ -15,6 +16,7 @@
         <td><%= role.roll %></td>
         <td><%= role.customer %></td>
         <td><%= role.jobs %></td>
+        <td><%= role.jobtimes %></td>
         <td><%= role.contacts %></td>
         <td><%= role.reports %></td>
         <td><%= role.settings_admin%> </td>
