--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -246,6 +246,14 @@ tr.odd{
     color: blue;
 }
 
+#hour, #min, #sec{
+    font-weight: bold;
+    font-size: 1.2em;
+    background: #E5E5E5;
+    padding: 3px 5px;
+    border-radius: 2px;
+    -moz-border-radius: 5px;
+}
 
 
 #map{
