--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,19 +1,5 @@
 <%= render '/layouts/customer_with_action' %>
-
-<ul class="nav nav-tabs" id="myTab">
-  <li class = <%= params[:controller] == "customers" || params[:action] == "new" ? 'active' : ''  %> >
-    <%= link_to 'Contact', new_contact_path %>
-  </li>
-</ul>
-<div class="tab-content">
-  <div class="tab-pane active" id="customer"></div>
-  <div class="tab-pane" id="job"></div>
-</div>
-<script>
-  $(function () {
-    $('#myTab a:last').tab('show');
-  })
-</script>
+<%= render '/layouts/tab_panel_for_customer' %>
 
 <%= form_for(@contact, :remote => true) do |f| %>
   <div id="error_explanation" style="display:none;">
