--- a/app/views/items/_auto_results.html.erb
+++ b/app/views/items/_auto_results.html.erb
@@ -33,6 +33,7 @@
     }
     $("#auto_complete_text").val(tex_val+''+item+',');
     $("#auto_results").hide();
+    $("#auto_complete_text").val('');
     $.ajax({
       url:'/items/create_inventory',
       data:{
