--- a/app/views/inventories/_inventory.html.erb
+++ b/app/views/inventories/_inventory.html.erb
@@ -1,5 +1,5 @@
 <%= form_for inventory,:url => inventory_path(inventory),:method => 'PUT',:remote => true do |f| %>
   <%= f.text_field :qty,:style => 'width:76px;height:12px;' %><br/>
-  <%= f.submit "update",:style => 'width:48px;height:28px;' %>
+  <%= f.submit "update",:style => 'width:48px;height:28px;',:class => "btn-primary" %>
   <%= link_to_function 'Cancel',"cancel_update('#{inventory.id}','#{inventory.qty}')" %>
 <% end %>
