--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -24,21 +24,18 @@
       <th>Reference no</th>
       <th>Date</th>
       <th>Status</th>
-      <th>Total</th>
       <th>Summary</th>
       <th colspan="3">Action</th>
     </tr>
 
     <% @jobs.each do |job| %>
       <tr class="<%= cycle('even', 'odd') %> ">
-        <td><%= job.reference_no %></td>
+        <td><%= link_to  job.reference_no, edit_job_path(job) %></td>
         <td><%= job.due_date %></td>
         <td><%= job.status %></td>
-        <td><%= job.sub_total %></td>
         <td><%= job.summary %></td>
 
         <td colspan="3">
-          <%= link_to image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), edit_job_path(job) %> |
           <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), job, method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
       </tr>
