all tasks completed

--- a/app/views/inventories/edit.js.erb
+++ b/app/views/inventories/edit.js.erb
@@ -1,2 +1,5 @@
+<% if params[:type] == "qty" %>
 $("#quantity_<%= @inventory.id %>").html('<%= escape_javascript render :partial => 'inventories/inventory',:locals => {:inventory => @inventory} %>')
+<% else %>
 $("#description_<%= @inventory.id %>").html('<%= escape_javascript render :partial => 'inventories/inventory1',:locals => {:inventory => @inventory} %>')
+<% end %>
