--- a/app/views/inventories/_inventory1.html.erb
+++ b/app/views/inventories/_inventory1.html.erb
@@ -1,5 +1,5 @@
 <%= form_for inventory,:url => inventory_path(inventory),:method => 'PUT',:remote => true do |f| %>
-  <%= f.text_field :description,:style => 'width:76px;height:12px;' %><br/>
-  <%= f.submit "update",:style => 'width:48px;height:28px;', :class => "btn-primary" %>
-  <%= link_to_function 'Cancel',"cancel('#{inventory.id}','#{inventory.description}')" %>
+  <%= f.text_field :description,:style => 'width:98px;height:12px;' %><br/>
+  <%= f.submit "update", :class => "btn btn-small btn-primary" %>
+  <%= link_to_function 'Cancel',"cancel('#{inventory.id}','#{inventory.description}')", :class => "btn btn-mini btn-primary" %>
 <% end %>
