changes made in user form, roles form, setting tab, item index page and contact

--- a/app/views/contacts/_contacts.html.erb
+++ b/app/views/contacts/_contacts.html.erb
@@ -3,6 +3,11 @@
 <table class="table">
   <table class="table table-striped">
     <tr>
+      <th colspan="9">
+        <%= link_to "Add New", new_contact_path %>
+      </th>
+    </tr>
+    <tr>
       <th>Name</th>
       <th>Role</th>
       <th>Email</th>
