--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/tabs_for_settings' %>
 <table class =" table-striped">
   <tr>
     <th colspan="7" style="background:#666; color: #FFF; font-weight: bold;">Items List</th>
